2006-07-26    <tino@firebird.03.softkill.net>

	* ptybuffer.c (ptybuffer_new_fd, main): history_tail added (option -t)

2006-04-12    <tino@firebird.03.softkill.net>

	* ptybuffer.c (daemonloop): A little typo (wrong cb function) make
	ptybuffer segfault.  This shows that the abstraction level of
	tino/sock.h is not high enough yet.

2006-01-30    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main, daemonloop, master_process): option -n hist

2005-06-04    <tino@firebird.03.softkill.net>

	* ptybuffer.c (connect_process): snprintf instead of sprintf

2004-11-12    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): SIGSEV corrected
	(main): more logging added and output clarified

2004-10-01    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): A lot of more options added.
	(file_out, file_log): Added logging at various places.

2004-09-20    <tino@firebird.03.softkill.net>

	* test.sh: set added, to see new environment variable
	PTYBUFFER_PID

	* ptybuffer.c: Option -d disabled daemonization, such that you can
	easily run programs under ptybuffer from /etc/inittab or similar.
	(master_process): Minor Bugfix (found at code review): When not
	all data could be delivered to the terminal at once, some data
	might have hung in ptybuffer until the next data block to the
	terminal was ready.  This bug is likely to trigger only if you
	transfer huge amounts of data to the terminal, which usually is
	not done.
	(main): put the current PID of ptybuffer into the environment as
	PTYBUFFER_PID, such that child processes know how to send signals
	there.

2004-05-23    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): cd /
	(sock_process, master_process, deamonloop): on close the socket is
	destroyed and freed, so I cannot check against the file
	descriptor.  Close-handling corrected.

2004-05-22    <tino@firebird.03.softkill.net>

	* ptybuffer.c: ECHO_SEND now is no more the default (it's stupid,
	"stty echo" and "stty -echo" are much better).
