@@ -3,3 +3,4 @@ Makefile.md5
 *.d
 ptybuffer
 ptybuffer_version.h
+ptybufferconnect
