@@ -11,6 +11,7 @@ head test/test.sh
 Changes
 =======
 
+2006-06-26 0.5.0	options -t, -c, -f
 2006-04-12 0.4.0	worksock from stdin, fresh tinolib, histsize
 2004-11-12 0.3.1	buffix options -l and -o
 2004-10-23 0.3.0	Options, minor bugfix, restructuring contents
@@ -154,7 +155,10 @@ http://nwn.bioware.com/
 webmaster@scylla-charybdis.com
 http://www.scylla-charybdis.com/
 $Log$
-Revision 1.4  2006-04-11 22:08:12  tino
+Revision 1.5  2006-07-26 12:20:21  tino
+options -c, -f and release
+
+Revision 1.4  2006/04/11 22:08:12  tino
 new release
 
 Revision 1.3  2004/10/22 01:12:23  tino
